fixed grid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,17 @@ body {
     height: 70vh;
 }
 
-.grid {
+/* .grid {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
     border: solid 1px;
     box-shadow: 15px 15px 15px;
+} */
+
+.grid {
+    width: 500px;
+    height: 500px;
 }
 
 .grid > div {
